I changed a few things in css that initially had a background image covering the entire page, but I got rid of that and turned the opacity off. I also have been having trouble with the list appearing on the right side so i attempted to fix that and thought it might be a scoping issue. no luck so far, but the edits were in index.handlebars

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,9 +2,6 @@ body {
     width: 99%;
     height: 900px;
     background-color: #fc6;
-    background-image: url("assets/img/burger.png");
-      background-repeat:no-repeat;
-      background-size:cover;
   }
   
   #top-bar {
